hphp/hack/test/typecheck/references/refs_in_array/foreach4.php.exp
File "foreach4.php", line 13, characters 33-35:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
